improved bamcmpcov